LORENZO:

fluent interface for JointTrajectoryPoint
fluent interface for JointTrajectory