@@ -1,23 +1,0 @@
-package coordination;
-
-import ros.msgs.std_msgs.Time;
-
-/**
- * @author James MacGlashan.
- */
-public class Header {
-
-	public int seq;
-	public Time stamp =new Time();
-	public String frame_id;
-
-	public Header() {
-	}
-
-	public Header(int seq, Time stamp, String frame_id) {
-		this.seq = seq;
-		this.stamp = stamp;
-		this.frame_id = frame_id;
-	}
-
-}
